# CTDL-GT-ASS1-FINAL

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  data_origin.csv  dbLib.cpp  dbLib.h  eventLib.cpp  eventLib.h  events.txt  listLib.h  main.cpp  processData.cpp  release_khoa.txt  result.txt  run.sh
resource/: data.csv  data_origin.csv  events.txt
